Add self introduction

--- a/ssh-ed25519.md
+++ b/ssh-ed25519.md
@@ -12,6 +12,12 @@ date
 allotted-time
 :   5m
 
+# 自己紹介
+
+- 西山和広
+- id:znz (github, twitter など)
+- Ruby コミッター
+
 # 何についての話か?
 
 - `~/.ssh/id_rsa` とか
